# profile-as-code

./: .gitignore  Dockerfile  Makefile  Pipfile  README.md  default_config.yml  main.py  profile-public.yml  pyproject.toml  requirements.txt  resume.json  resume.tex  specs.yml  todo.txt  update.py
example/: main.py
example/input/: basic-details.private.yml  basic-details.yml  education.yml  experience.yml  personal-projects.yml  professional-projects.yml  skills.yml  talks.yml
legacy/: .gitignore  default_config.yml
legacy/profile/: education.yml  experience.yml  general.yml  personal-projects.yml  professional-projects.yml  skills.yml  talks.yml
legacy/pyprofile/: __init__.py  __main__.py  interface.py  loading.py
legacy/specs/: config.yml
profile/: .private-censored.yml  .public.yml  basic-details.yml  education.yml  experience.yml  professional-projects.yml  skills.yml
pyprofile/: __init__.py  __main__.py  interface.py  io.py  loading.py  parsing.py  profile.py  runner.py  utils.py
pyprofile/contracts/: profile.yml
pyprofile/profile/: __init__.py  education.py  experience.py  general.py  personal_project.py  professional_project.py  profile.py  talk.py
pyprofile/renderers/: base.py
pyprofile/texcv/: __init__.py  generate.py
pyprofile/transformers/: transformer.py
resume/: experience.tex
specs/: config.yml  profile.yml
tex-cv-legacy/src/: awesome-cv.cls  resume.tex
tex-cv-public/: resume.tex
tex-cv-public/resume/: education.tex  experience.tex  skills.tex
tex-cv/resume/: education.tex  experience.tex
website/: index.html
(+53 files in other folders)
